syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "Protos/Common.proto";

option csharp_namespace = "MozartUI.Services.Grpc";

package mozartui.services;

service DeployService {
  //
  rpc GetDeployInfo(Empty) returns (DeployInfo) {
    option (google.api.http) = {
			get: "/api/getDeployInfo"
		};
  }
  //
  rpc GetFileInfos(PathRequest) returns (DeployResult) {
    option (google.api.http) = {
			post: "/api/getFileInfos"
			body: "*"
		};
  }
  //
  rpc CreateDirectory(PathRequest) returns (DeployResult) {
    option (google.api.http) = {
			post: "/api/createDirectory"
			body: "*"
		};
  }
  //
  rpc DeleteItem(FileInformation) returns (DeployResult) {
    option (google.api.http) = {
			post: "/api/deleteItem"
			body: "*"
		};
  }
  rpc RenameItem(PathNameRequest) returns (DeployResult) {
    option (google.api.http) = {
			post: "/api/renameItem"
			body: "*"
		};
  }
  //
  rpc CopyTo(DoublePathRequest) returns (DeployResult) {
    option (google.api.http) = {
			post: "/api/copyTo"
			body: "*"
		};
  }
  //
  rpc MoveTo(DoublePathRequest) returns (DeployResult) {
    option (google.api.http) = {
			post: "/api/moveTo"
			body: "*"
		};
  }
  //
  rpc Download (stream FileStream) returns (stream FileStream);
  //
  rpc Upload (stream FileStream) returns(stream FileStream);
}

message DeployInfo {
  //
  string workingDirectory = 1;
  //
  string delimeter = 2;
}

message PathRequest {
  //
  string path = 1;
  //
  google.protobuf.StringValue name = 2;
}

message DoublePathRequest {
  //
  FileInformation source = 1;
  //
  FileInformation destination = 2;
}

message PathNameRequest {
  //
  FileInformation info = 1;
  //
  string name = 2;
}

message FileInformation {
  // The file system item's path.
  google.protobuf.StringValue path = 1;
  // The file system item's path specified in keys.
  repeated google.protobuf.StringValue pathKeys = 2;
  // The file system item's key.
  string key = 3;
  // The file system item's name.
  string name = 4;
  // A timestamp that indicates when the file system item was last modified.
  google.protobuf.Timestamp dateModified = 5;
  // The file system item's size (in bytes).
  google.protobuf.Int64Value size = 6;
  // Specifies whether the file system item is a directory.
  google.protobuf.BoolValue isDirectory = 7;
  // Specifies whether a directory has subdirectories.
  google.protobuf.BoolValue hasSubDirectories = 8;
  // An icon (URL) to be used as the file system item's thumbnail.
  google.protobuf.StringValue thumbnail = 9;
  //
  google.protobuf.StringValue contentType = 10;
  //
  int32 attributes = 11;
}

message DeployResult {
  //
  bool success = 1;
  //
  google.protobuf.Int32Value errorCode = 2;
  //
  google.protobuf.StringValue errorText = 3;
  //
  repeated FileInformation result = 4;
}

enum FileStreamMessageType {
  Streaming = 0;
  SessionCreate = 1;
  SessionClose =2;
  SessionCancel=3;
  SessionLessLoad=4;
  SessionSave=5;
  SessionLessSave=6;
  SessionLessDelete=7;
  LoadMetaData=8;
}

message FileContent {
  string name = 1;
  int64 total = 2;
  int64 rangeStart = 3;
  int64 rangeEnd = 4;
  bytes block = 5;
}

message FileStream {
  string sessionId= 1;
  FileStreamMessageType messageType=2;

  oneof request {
      FileInformation information=3;
      FileContent content=4;
  }
}
