syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "Protos/Common.proto";

option csharp_namespace = "MozartUI.Services.Grpc";

package mozartui.services;

service ServerService {
  //
  // rpc GetServerInfo(Empty) returns (ServerInfo)
  // Get server time
	rpc ServerTime(stream Empty) returns (stream ServerTimeResponse);
  //
  rpc GetServerInfo(Empty) returns (ServerInfo) {
	  option (google.api.http) = {
        get: "/api/ss/getServerInfo"
	  };
  }
  //
  rpc ServerState(stream Empty) returns (stream ServerStateResponse);
}

message ServerTimeResponse {
  string time = 1;
}

message ServerInfo {
  string processorName = 1;
  string operatingSystem = 2;
  bool is64BitOperatingSystem = 3;
  string physicalMemory = 4;
  string dotnetVersion = 5;
  string driveInfo = 6;
  google.protobuf.Timestamp currentTimeTs = 7;
  string dotnetVersions = 8;
}

message ServerStateResponse {
  double cpuUsage = 1;
  double memoryUsage = 2;
  double diskUsage = 3;
}
